fixed cards on mobile

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -53,7 +53,7 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(bg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(../images/bg.jpg);
 }
 .header {
     color: #18b25b;
@@ -79,7 +79,7 @@
 
 .about {
     width: 75%;
-    height: 80vh;
+    /*height: 80vh;*/
     display: flex;
     flex-direction: row;
     background-color: white;
@@ -156,12 +156,15 @@
         display: flex;
         flex-direction: column;
     }
+    .about-grid {
+        grid-template-columns: 100%;
+    }
 }
 
 
 
 
-
+/* FIX RESPONSIVENESS FOR CARDS ON IPHONE X / MOBILE*/
 
 
 
